--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="all" rel="stylesheet" type="text/css" />
     <title>drastic-dams</title>
-    <link href="./dashboard.css" rel="stylesheet">
+    <link href="./dashboard.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <noscript>
